Altered coloring and added favicon

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="description" content="This web page is meant to serve as a course assignment portal 
         for Jennifer Weber in the class WDD 230 - Web Frontend Development." />
     <meta name="author" content="Jennifer Weber" />
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles/base.css">
-
 </head>
 
 <body>
