Added social media meta tags

--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jennifer Weber - WDD 230 - Web Frontend Development</title>
     <meta name="description" content="This web page is meant to serve as a course assignment portal 
-        for Jennifer Weber in the class WDD 230 - Web Frontend Development." />
-    <meta name="author" content="Jennifer Weber" />
+        for Jennifer Weber in the class WDD 230 - Web Frontend Development.">
+    <meta name="author" content="Jennifer Weber">
+
+    <meta property="og:title" content="Jennifer Weber - WDD 230 - Web Frontend Development Home Page">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://u.realgeeks.media/stewartrealtyllc/nampa-2100x1440.jpg">
+    <meta property="og:url" content="https://jkweber236.github.io/wdd230/">
+
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles/base.css">
 </head>
