--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta property="og:url" content="https://jkweber236.github.io/wdd230/">
 
     <link rel="icon" href="favicon.ico">
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
 </head>
 
