--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <section class="card">
             <h3>Learning Activities</h3>
             <ul>
-                <li>01. <a></a></li>
-                <li>02. <a></a></li>
+                <li>01. <a>l</a></li>
+                <li>02. <a href="lesson02/design.html">Web Design Principles</a></li>
                 <li>03. <a></a></li>
                 <li>04. <a></a></li>
                 <li>05. <a></a></li>
