Added media query page

--- a/lesson02/design.html
+++ b/lesson02/design.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WDD 230 - Design Principles</title>
+    <meta name="description" content="Design principles learning activity example page">
+    <meta name="author" content="Jennifer Weber">
     <link rel="stylesheet" href="styles/design.css">
 </head>
 
