--- a/index.html
+++ b/index.html
@@ -37,8 +37,11 @@
         <section class="card">
             <h3>Learning Activities</h3>
             <ul>
-                <li>01. <a>l</a></li>
-                <li>02. <a href="lesson02/design.html">Web Design Principles</a></li>
+                <li>01. <a href="lesson01/holygrail.html">Holy Layout</a></li>
+                <li>02.
+                    <a href="lesson02/media-query.html">Media Query</a> |
+                    <a href="lesson02/design-principles.html">Design Principles Document</a>
+                </li>
                 <li>03. <a></a></li>
                 <li>04. <a></a></li>
                 <li>05. <a></a></li>
