--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/larger.css">
 </head>
 
 <body>
@@ -34,7 +35,7 @@
     </nav>
     <main>
         <h2>WDD 230: Web Frontend Development</h2>
-        <section class="card">
+        <section class="card" id="section1">
             <h3>Learning Activities</h3>
             <ul>
                 <li>01. <a href="lesson01/holygrail.html">Holy Layout</a></li>
@@ -52,7 +53,7 @@
                 <li>10. <a></a></li>
             </ul>
         </section>
-        <section class="card">
+        <section class="card" id="section2">
             <h3>Information</h3>
             <p>Rexburg, Idaho</p>
             <p>Weather</p>
