Removed trailing slash

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
     <header>
-        <img src="images/my-photo.jpg" alt="Profile picture" />
+        <img src="images/my-photo.jpg" alt="Profile picture">
         <h1>Jennifer Weber</h1>
     </header>
     <nav>
