Created design principle document

--- a/lesson02/design-principles.html
+++ b/lesson02/design-principles.html
@@ -4,11 +4,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Design Principles Document</title>
+    <meta name="description" content="This is the design principles document of 
+    Jennifer Weber, for the class WDD 230 - Web Frontend Development.">
+    <meta name="author" content="Jennifer Weber">
+
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/design-principles-medium.css">
+    <link rel="stylesheet" href="styles/design-principles-large.css">
 </head>
 
 <body>
-
+    <header>
+        <h1>Design Principles Document</h1>
+        <h2>Jennifer Weber</h2>
+    </header>
+    <main>
+        <section class="card" id="align">
+            <h3>Alignment</h3>
+            <p id="name">BYU-Idaho</p>
+            <a href="https://my.byui.edu">my.byui.edu</a>
+            <img src="images/alignment.PNG" alt="BYUI Home Page">
+            <p>
+                This webpage exemplifies the principle of alignment because its elements
+                are arranged in an organized and consistent manner. Each widget is aligned
+                both horizontally and vertically with the other widgets. The text corresponding
+                with each one is also center aligned, indicating that they are related in some way.
+                The structure of the pieces on the page gives them a clear visual connection.
+            </p>
+        </section>
+        <section class="card" id="contrast">
+            <h3>Contrast</h3>
+            <p id="name">W3Schools</p>
+            <a href="https://www.w3schools.com">w3schools.com</a>
+            <img src="images/contrast.PNG" alt="W3Schools Home Page">
+            <p>
+                This webpage is a great example of contrast because it has
+                light-colored text against a dark background. The utilization of
+                this design principle helps to increase the visibility of the content
+                on the page and improves the visual appeal. Additionally, the simplicity
+                of the page further aids with its contrast as it puts an emphasis on the
+                most important aspects.
+            </p>
+        </section>
+        <section class="card" id="thirds">
+            <h3>Rule of Thirds</h3>
+            <p id="name">Church of Jesus Christ of Latter Day Saints</p>
+            <a href="https://www.churchofjesuschrist.org">churchofjesuschrist.org</a>
+            <img src="images/rule-of-thirds.PNG" alt="Church of Jesus Christ of Latter Day Saints Home Page">
+            <p>
+                This church webpage is an example of the rule of thirds because of the main image
+                on the page. The focus is on the child's face which is positioned at the intersection
+                of the (imaginary) grid lines, following the rule of thirds principle. The surrounding
+                elements are also carefully arranged to further complement and emphasize the main subject.
+                This gives the design a balanced and visually appealing composition.
+            </p>
+        </section>
+    </main>
+    <footer>
+        <p>©<span id="currentYear"></span>
+            | Jennifer Weber |
+            <span id="lastModified"></span>
+        </p>
+    </footer>
+    <script src="scripts/getdates.js"></script>
 </body>
 
 </html>
