Fixed html errors

--- a/lesson02/design-principles.html
+++ b/lesson02/design-principles.html
@@ -23,7 +23,7 @@
     <main>
         <section class="card" id="align">
             <h3>Alignment</h3>
-            <p id="name">BYU-Idaho</p>
+            <p class="name">BYU-Idaho</p>
             <a href="https://my.byui.edu">my.byui.edu</a>
             <img src="images/alignment.PNG" alt="BYUI Home Page">
             <p>
@@ -36,7 +36,7 @@
         </section>
         <section class="card" id="contrast">
             <h3>Contrast</h3>
-            <p id="name">W3Schools</p>
+            <p class="name">W3Schools</p>
             <a href="https://www.w3schools.com">w3schools.com</a>
             <img src="images/contrast.PNG" alt="W3Schools Home Page">
             <p>
@@ -50,7 +50,7 @@
         </section>
         <section class="card" id="thirds">
             <h3>Rule of Thirds</h3>
-            <p id="name">Church of Jesus Christ of Latter Day Saints</p>
+            <p class="name">Church of Jesus Christ of Latter Day Saints</p>
             <a href="https://www.churchofjesuschrist.org">churchofjesuschrist.org</a>
             <img src="images/rule-of-thirds.PNG" alt="Church of Jesus Christ of Latter Day Saints Home Page">
             <p>
