--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
                     <a href="lesson02/media-query.html">Media Query</a> |
                     <a href="lesson02/design-principles.html">Design Principles Document</a>
                 </li>
-                <li>03. <a></a></li>
+                <li>03. <a href="lesson03/images/combinator-exercise.png">Combinator Exercise</a> |
+                    <a href="https://codepen.io/jkweber236-the-encoder/pen/bGJXXjP">CSS Pseudo-elements</a>
+                </li>
                 <li>04. <a></a></li>
                 <li>05. <a></a></li>
                 <li>06. <a></a></li>
