Altered link text

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </li>
                 <li>03. <a href="lesson03/images/combinator-exercise.png">Combinator Exercise</a> |
                     <a href="https://codepen.io/jkweber236-the-encoder/pen/bGJXXjP">CSS Pseudo-elements</a> |
-                    <a href="https://codepen.io/jkweber236-the-encoder/pen/vYMoowQ">Responsive "Hamburger" Menu</a>
+                    <a href="https://codepen.io/jkweber236-the-encoder/pen/vYMoowQ">Responsive Menu</a>
                 </li>
                 <li>04. <a></a></li>
                 <li>05. <a></a></li>
