--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <img src="images/my-photo.jpg" alt="Profile picture">
         <h1>Jennifer Weber</h1>
     </header>
+    <button id="menu"></button>
     <nav>
         <a rel="home" href="#">Home</a>
         <a rel="site-plan" href="lesson03/chamber-site-plan.html">Site Plan</a>
@@ -43,8 +44,8 @@
                     <a href="lesson02/media-query.html">Media Query</a> |
                     <a href="lesson02/design-principles.html">Design Principles Document</a>
                 </li>
-                <li>03. <a href="lesson03/images/combinator-exercise.png">Combinator Exercise</a> |
-                    <a href="https://codepen.io/jkweber236-the-encoder/pen/bGJXXjP">CSS Pseudo-elements</a> |
+                <li>03. <a href="lesson03/images/combinator-exercise.png">Combinators</a> |
+                    <a href="https://codepen.io/jkweber236-the-encoder/pen/bGJXXjP">Pseudo-Element</a> |
                     <a href="https://codepen.io/jkweber236-the-encoder/pen/vYMoowQ">Responsive Menu</a>
                 </li>
                 <li>04. <a></a></li>
@@ -63,6 +64,10 @@
             <p>Page Visits</p>
         </section>
     </main>
+    <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d92479.32260690616!2d-116.64529468043708!3d43.58615725590973!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54ae4c694e97f129%3A0xae19866371324a52!2sNampa%2C%20ID!5e0!3m2!1sen!2sus!4v1715143124210!5m2!1sen!2sus"
+        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
     <footer>
         <p>©<span id="currentYear"></span><br>
             Jennifer Weber<br>
@@ -70,6 +75,7 @@
         <p id="lastModified"></p>
     </footer>
     <script src="scripts/getdates.js"></script>
+    <script src="scripts/responsive-menu.js"></script>
 </body>
 
 </html>
