Fixed button (again)

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <img src="images/my-photo.jpg" alt="Profile picture">
         <h1>Jennifer Weber</h1>
     </header>
-    <button id="menu"> </button>
+    <button id="menu" value="Submit"> </button>
     <nav>
         <a rel="home" href="#">Home</a>
         <a rel="site-plan" href="lesson03/chamber-site-plan.html">Site Plan</a>
