--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -14,42 +14,62 @@
 </head>
 
 <body>
-    <header>
-        <h1>Chamber of Commerce Site Plan</h1>
-        <h2>Jennifer Weber</h2>
-    </header>
-    <h2>Site Name: </h2>
-    <p>Nampa Chamber of Commerce. This name specifies the operational location of the chamber.</p>
-    <h2>Site Purpose: </h2>
-    <p class="test7">
-        The Nampa Chamber of Commerce website serves as an online platform with the aim of promoting community
-        engagment and supporting local businesses. Our primary goals include creating connections between
-        businesses and customers, and showcasing everything Nampa has in store for its residents and
-        visitors. We provide up-to-date information on events and local attractions to help residents looking to
-        be a part of the latest events, visitors hoping to uncover the hidden gems of Nampa, and businesses
-        seeking community support and growth opportunities.
-    </p>
-    <h2>Scenarios:</h2>
-    <p class="test2">How can I contribute to the growth of local businesses and support the community?</p>
-    <p class="test1">What resources are available for entrepreneurs looking to start a business in Nampa?</p>
-    <p>How can I submit an event to be featured on the Nampa Chamber of Commerce website?</p>
-    <h2 class="test4">Color Schema:</h2>
-    <table class="colors">
-        <tr>
-            <th>Primary</th>
-            <th>Secondary</th>
-        </tr>
-        <tr>
-            <td id="primary">[#1C3738]</td>
-            <td id="secondary">[#006C67]</td>
-        </tr>
-    </table>
-    <h2>Typography: </h2>
-    <p>Font: Karla</p>
-    <h2>Wireframe:</h2>
-    <img src="images/large-homepage-wireframe.png" alt="Wireframe">
-    <link rel="Wireframe" href="https://wireframe.cc/nOg8Dv">
-    <link rel="Wireframe" href="https://wireframe.cc/eqauWW">
+    <div class="container">
+        <header>
+            <h1>Chamber of Commerce Site Plan</h1>
+            <h2>Jennifer Weber</h2>
+        </header>
+        <h2>Site Name: </h2>
+        <p>Nampa Chamber of Commerce. This name specifies the operational location of the chamber.</p>
+        <h2>Site Purpose: </h2>
+        <p>
+            The Nampa Chamber of Commerce website serves as an online platform with the aim of promoting community
+            engagment and supporting local businesses. Our primary goals include creating connections between
+            businesses and customers, and showcasing everything Nampa has in store for its residents and
+            visitors. We provide up-to-date information on events and local attractions to help residents looking to
+            be a part of the latest events, visitors hoping to uncover the hidden gems of Nampa, and businesses
+            seeking community support and growth opportunities.
+        </p>
+        <h2>Scenarios:</h2>
+        <p>How can I contribute to the growth of local businesses and support the community?</p>
+        <p>What resources are available for entrepreneurs looking to start a business in Nampa?</p>
+        <p>How can I submit an event to be featured on the Nampa Chamber of Commerce website?</p>
+        <h2>Color Schema:</h2>
+        <table class="colors">
+            <tr>
+                <th>Primary</th>
+                <th>Secondary</th>
+                <th>Background</th>
+            </tr>
+            <tr>
+                <td id="primary">[#4f9b9e]</td>
+                <td id="secondary">[#274d4f]</td>
+                <td id="background">[#cfcfcf]</td>
+            </tr>
+        </table>
+        <div class="color-lists">
+            <ul class="primary-list">
+                <li>Header background (black text)</li>
+                <li>Footer background (black text)</li>
+            </ul>
+            <ul class="secondary-list">
+                <li>All body font color (excluding the header and footer)</li>
+            </ul>
+            <ul class="background-list">
+                <li>Events box background</li>
+                <li>Business spotlight backgrounds</li>
+                <li>Weather box background</li>
+            </ul>
+        </div>
+        <h2>Typography: </h2>
+        <p id="font1">Font: Kanit (Headings/Sub-headings)</p>
+        <p id="font2">Font: Karla (Body)</p>
+        <h2>Wireframes:</h2>
+        <h3>Mobile View</h3>
+        <img class="small" src="images/small-homepage-wireframe.png" alt="Mobile Wireframe">
+        <h3>Desktop View</h3>
+        <img class="large" src="images/large-homepage-wireframe.png" alt="Webpage Wireframe">
+    </div>
 </body>
 
 </html>
