Fixed error in title

--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chamber Site PLan</title>
+    <title>Chamber Site Plan</title>
     <meta name="description" content="This webpage is meant to display
     the site plan for the Chamber of Commerce website of Jennifer Weber.">
     <meta name="author" content="Jennifer Weber">
