--- a/chamber/index.html
+++ b/chamber/index.html
@@ -9,6 +9,7 @@
     Nampa Chamber of Commerce site, created for WDD - 230. ">
     <meta name="author" content="Jennifer Weber">
 
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
