--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <nav>
         <a rel="home" href="#">Home</a>
         <a rel="site-plan" href="lesson03/chamber-site-plan.html">Site Plan</a>
-        <a rel="chamber" href="chamber/index.html">Chamber</a>
+        <a rel="chamber" href="chamber/">Chamber</a>
         <a rel="external" href="https://www.byui.edu/">BYU-Idaho</a>
         <a rel="external"
             href="https://www.churchofjesuschrist.org/study/scriptures/bofm/3-ne/14?lang=eng&id=p7#p7">Scripture</a>
