Completed base styling

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -30,23 +30,33 @@
         </div>
         <nav>
             <a rel="home" href="#">Home</a>
-            <a rel="discover" href="">Discover</a>
-            <a rel="directory" href="">Directory</a>
-            <a rel="join" href="">Join</a>
+            <a rel="discover" href="#">Discover</a>
+            <a rel="directory" href="#">Directory</a>
+            <a rel="join" href="#">Join</a>
         </nav>
     </header>
     <main>
-        <div>
+        <div class="hero-section">
             <img id="hero" src="images/chamber-hero5.jpg" alt="Nampa Train Depot Museum">
             <button id="action">Join the Chamber</button>
         </div>
-        <div>
+        <section class="section1">
             <h2>Events</h2>
-        </div>
-        <div>
+            <p>Lorem ipsum dolor sit amet et delectus accommodare...</p>
+            <p>Lorem ipsum dolor sit amet et delectus accommodare...</p>
+            <p>Lorem ipsum dolor sit amet et delectus accommodare...</p>
+            <a href="#" class="section-link">View all events</a>
+        </section>
+        <section class="section2">
+            <h2>Business Spotlights</h2>
+            <p>Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix</p>
+            <p>Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix</p>
+            <p>Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix</p>
+        </section>
+        <section class="section3">
             <h2>Weather</h2>
-        </div>
-        <p>company spotlights</p>
+            <p>Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae</p>
+        </section>
     </main>
     <footer>
         <p>©<span id="currentYear"></span></p>
@@ -54,7 +64,7 @@
         <p>WDD 230</p>
         <p id="lastModified"></p>
     </footer>
-    <script src=" scripts/getdates.js"></script>
+    <script src="scripts/getdates.js"></script>
     <script src="scripts/responsive-menu.js"></script>
 </body>
 
