Added to footer content

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -59,10 +59,21 @@
         </section>
     </main>
     <footer>
-        <p>©<span id="currentYear"></span></p>
-        <p>Jennifer Weber</p>
-        <p>WDD 230</p>
-        <p id="lastModified"></p>
+        <img src="images/placeholder.jpg" alt="Nampa Commerce Logo">
+        <div class="contact-info">
+            <p class="site-name">Nampa Chamber of Commerce</p>
+            <p>
+                Contact Info:<br>
+                info@nampacc.org<br>
+                (208) 495-2722
+            </p>
+        </div>
+        <div class="footer-info">
+            <p>©<span id="currentYear"></span> Nampa Chamber</p>
+            <p>Jennifer Weber</p>
+            <p>WDD 230 Project</p>
+            <p id="lastModified"></p>
+        </div>
     </footer>
     <script src="scripts/getdates.js"></script>
     <script src="scripts/responsive-menu.js"></script>
