Styled large.css

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -40,23 +40,38 @@
             <img id="hero" src="images/chamber-hero5.jpg" alt="Nampa Train Depot Museum">
             <button id="action">Join the Chamber</button>
         </div>
-        <section class="section1">
-            <h2>Events</h2>
-            <p>Lorem ipsum dolor sit amet et delectus accommodare...</p>
-            <p>Lorem ipsum dolor sit amet et delectus accommodare...</p>
-            <p>Lorem ipsum dolor sit amet et delectus accommodare...</p>
-            <a href="#" class="section-link">View all events</a>
-        </section>
-        <section class="section2">
-            <h2>Business Spotlights</h2>
-            <p>Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix</p>
-            <p>Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix</p>
-            <p>Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix</p>
-        </section>
-        <section class="section3">
-            <h2>Weather</h2>
-            <p>Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae</p>
-        </section>
+        <div class="site-content">
+            <section class="section1">
+                <h2>Events</h2>
+                <div class="events">
+                    <p class="event1">Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at
+                        vix</p>
+                    <img class="event1" src="images/placeholder.jpg" alt="Event 1 image">
+                    <p class="event2">Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at
+                        vix</p>
+                    <img class="event2" src="images/placeholder.jpg" alt="Event 2 image">
+                    <p class="event3">Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at
+                        vix</p>
+                    <img class="event3" src="images/placeholder.jpg" alt="Event 3 image">
+                </div>
+                <a href="#" class="section-link">View all events</a>
+            </section>
+            <section class="section2">
+                <h2>Business Spotlights</h2>
+                <div class="businesses">
+                    <p class="business1">Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos
+                        at vix</p>
+                    <p class="business2"> Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae
+                        legendos at vix</p>
+                    <p class="business3">Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos
+                        at vix</p>
+                </div>
+            </section>
+            <section class="section3">
+                <h2>Weather</h2>
+                <p>Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae</p>
+            </section>
+        </div>
     </main>
     <footer>
         <img src="images/placeholder.jpg" alt="Nampa Commerce Logo">
