Finished styling larger.css

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -37,7 +37,7 @@
     </header>
     <main>
         <div class="hero-section">
-            <img id="hero" src="images/chamber-hero5.jpg" alt="Nampa Train Depot Museum">
+            <img id="hero" src="images/chamber-hero.jpg" alt="Nampa Train Depot Museum">
             <button id="action">Join the Chamber</button>
         </div>
         <div class="site-content">
@@ -85,8 +85,11 @@
         </div>
         <div class="footer-info">
             <p>©<span id="currentYear"></span> Nampa Chamber</p>
+            <p class="footer-break"> | </p>
             <p>Jennifer Weber</p>
+            <p class="footer-break"> | </p>
             <p>WDD 230 Project</p>
+            <p class="footer-break"> | </p>
             <p id="lastModified"></p>
         </div>
     </footer>
