--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -43,7 +43,7 @@
             </tr>
             <tr>
                 <td id="primary">[#4f9b9e]</td>
-                <td id="secondary">[#274d4f]</td>
+                <td id="secondary">[#234547]</td>
                 <td id="background">[#cfcfcf]</td>
             </tr>
         </table>
