--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
     </main>
     <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d92479.32260690616!2d-116.64529468043708!3d43.58615725590973!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54ae4c694e97f129%3A0xae19866371324a52!2sNampa%2C%20ID!5e0!3m2!1sen!2sus!4v1715143124210!5m2!1sen!2sus"
-        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"></iframe>
+        allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     <footer>
         <p>©<span id="currentYear"></span><br>
             Jennifer Weber<br>
