Added aria-lable to menu button to remove button error

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -26,7 +26,7 @@
         <div class="small-header">
             <img src="images/placeholder.jpg" alt="Nampa Commerce Logo">
             <h1>Nampa <br class="title-break"> Chamber of <br class="title-break"> Commerce</h1>
-            <button id="menu"></button>
+            <button id="menu" aria-label="Menu"></button>
         </div>
         <nav>
             <a rel="home" href="#">Home</a>
