Linked BOM assignment to course home page

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <a href="https://codepen.io/jkweber236-the-encoder/pen/vYMoowQ">Responsive Menu</a>
                 </li>
                 <li>04. <a></a></li>
-                <li>05. <a></a></li>
+                <li>05. <a href="lesson05/bom.html">Book of Mormon Favorite Chapters</a></li>
                 <li>06. <a></a></li>
                 <li>07. <a></a></li>
                 <li>08. <a></a></li>
