--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <a href="https://codepen.io/jkweber236-the-encoder/pen/bGJXXjP">Pseudo-Element</a> |
                     <a href="https://codepen.io/jkweber236-the-encoder/pen/vYMoowQ">Responsive Menu</a>
                 </li>
-                <li>04. <a></a></li>
+                <li>04. <a href="https://codepen.io/jkweber236-the-encoder/pen/ZENOePa">CSS Pseudo-Classes</a></li>
                 <li>05. <a href="lesson05/bom.html">Book of Mormon Favorite Chapters</a></li>
                 <li>06. <a></a></li>
                 <li>07. <a></a></li>
