--- a/chamber/index.html
+++ b/chamber/index.html
@@ -97,6 +97,7 @@
     </footer>
     <script src="scripts/getdates.js"></script>
     <script src="scripts/responsive-menu.js"></script>
+    <script src="scripts/dark-mode.js"></script>
 </body>
 
 </html>
