Added aria-label to toggle

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -27,7 +27,7 @@
             <img src="images/placeholder.jpg" alt="Nampa Commerce Logo">
             <h1>Nampa <br class="title-break"> Chamber of <br class="title-break"> Commerce</h1>
             <button id="menu" aria-label="Menu"></button>
-            <label class="switch">
+            <label class="switch" aria-label="toggle">
                 <input type="checkbox">
                 <span class="slider round"></span>
             </label>
