--- a/chamber/index.html
+++ b/chamber/index.html
@@ -25,7 +25,7 @@
     <header>
         <div class="small-header">
             <img src="images/placeholder.jpg" alt="Nampa Commerce Logo">
-            <h1>Nampa <br class="title-break"> Chamber of <br class="title-break"> Commerce</h1>
+            <h1>Nampa Chamber of Commerce</h1>
             <button id="menu" aria-label="Menu"></button>
             <label class="switch" aria-label="toggle">
                 <input type="checkbox">
