Added folder to favicon

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -14,7 +14,7 @@
     <meta property="og:image" content="https://u.realgeeks.media/stewartrealtyllc/nampa-2100x1440.jpg">
     <meta property="og:url" content="https://jkweber236.github.io/wdd230/chamber/">
 
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="images/favicon.ico">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
