--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </li>
                 <li>04. <a href="https://codepen.io/jkweber236-the-encoder/pen/ZENOePa">CSS Pseudo-Classes</a></li>
                 <li>05. <a href="lesson05/bom.html">Book of Mormon - Top 10</a></li>
-                <li>06. <a></a></li>
+                <li>06. <a href="lesson06/images/landscape.webp">WebP</a></li>
                 <li>07. <a></a></li>
                 <li>08. <a></a></li>
                 <li>09. <a></a></li>
