Changed hero image and color scheme

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -24,7 +24,7 @@
 <body>
     <header>
         <div class="small-header">
-            <img src="images/placeholder.jpg" alt="Nampa Commerce Logo">
+            <img src="images/placeholder.webp" alt="Nampa Commerce Logo">
             <h1>Nampa Chamber of Commerce</h1>
             <button id="menu" aria-label="Menu"></button>
             <label class="switch" aria-label="toggle">
@@ -41,7 +41,7 @@
     </header>
     <main>
         <div class="hero-section">
-            <img id="hero" src="images/chamber-hero.jpg" alt="Nampa Train Depot Museum">
+            <img id="hero" src="images/chamber-hero2.webp" alt="Nampa Train Depot Museum">
             <button id="action">Join the Chamber</button>
         </div>
         <div class="site-content">
@@ -50,13 +50,13 @@
                 <div class="events">
                     <p class="event1">Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at
                         vix</p>
-                    <img class="event1" src="images/placeholder.jpg" alt="Event 1 image">
+                    <img class="event1" src="images/placeholder.webp" alt="Event 1 image">
                     <p class="event2">Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at
                         vix</p>
-                    <img class="event2" src="images/placeholder.jpg" alt="Event 2 image">
+                    <img class="event2" src="images/placeholder.webp" alt="Event 2 image">
                     <p class="event3">Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at
                         vix</p>
-                    <img class="event3" src="images/placeholder.jpg" alt="Event 3 image">
+                    <img class="event3" src="images/placeholder.webp" alt="Event 3 image">
                 </div>
                 <a href="#" class="section-link">View all events</a>
             </section>
@@ -76,7 +76,7 @@
         </div>
     </main>
     <footer>
-        <img src="images/placeholder.jpg" alt="Nampa Commerce Logo">
+        <img src="images/placeholder.webp" alt="Nampa Commerce Logo">
         <div class="contact-info">
             <p class="site-name">Nampa Chamber of Commerce</p>
             <p>
