Changed hero sizing on course home page

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -41,7 +41,7 @@
     </header>
     <main>
         <div class="hero-section">
-            <img id="hero" src="images/chamber-hero2.webp" alt="Nampa Train Depot Museum">
+            <img id="hero" src="images/chamber-hero.webp" alt="Nampa Train Depot Museum">
             <button id="action">Join the Chamber</button>
         </div>
         <div class="site-content">
