--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <li>06. <a href="lesson06/images/landscape.webp">WebP</a> |
                     <a href="lesson06/responsive-images.html">Responsive Images</a>
                 </li>
-                <li>07. <a></a></li>
+                <li>07. <a href="lesson07/lazyload.html"></a></li>
                 <li>08. <a></a></li>
                 <li>09. <a></a></li>
                 <li>10. <a></a></li>
