--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <h3>Information</h3>
             <p>Rexburg, Idaho</p>
             <p>Weather</p>
-            <p>Page Visits</p>
+            <p id="pageVisits"></p>
         </section>
     </main>
     <iframe
@@ -90,6 +90,7 @@
     </footer>
     <script src="scripts/getdates.js"></script>
     <script src="scripts/responsive-menu.js"></script>
+    <script src="scripts/page-visits.js"></script>
 </body>
 
 </html>
