--- a/chamber/index.html
+++ b/chamber/index.html
@@ -34,12 +34,12 @@
         </div>
         <nav>
             <a rel="home" href="#">Home</a>
-            <a rel="discover" href="#">Discover</a>
+            <a rel="discover" href="discover.html">Discover</a>
             <a rel="directory" href="#">Directory</a>
             <a rel="join" href="#">Join</a>
         </nav>
     </header>
-    <main>
+    <main class="home">
         <div class="hero-section">
             <img id="hero" src="images/chamber-hero.webp" alt="Nampa Train Depot Museum">
             <button id="action">Join the Chamber</button>
