Added styling to discover page

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -40,40 +40,44 @@
         </nav>
     </header>
     <main id="discover">
-        <p id="lastVisit"></p>
-        <div class="demographics">
-            <h2>Demographics (as of 2023)</h2>
-            <p>Total Population: 109,926</p>
-            <p>Male: 49.3%</p>
-            <p>Female: 50.7%</p>
-            <p>Average Household Size: 2.81</p>
-        </div>
-        <div class="city-council">
-            <h2>City Council</h2>
-            <h3>Mayor</h3>
-            <p>Debbie Kling</p>
-            <h3>Council Members</h3>
-            <p>Victor Rodriquez</p>
-            <p>Natalie Jangula</p>
-            <p>David Bills</p>
-            <p>Dale Reynolds</p>
-            <p>Randy Haverfield</p>
-            <p>Sebastian Griffin</p>
-        </div>
-        <div class="local-photos">
-            <img src="images/nampa-sign.webp" loading="lazy">
-            <p>Nampa Welcome sign</p>
-            <img src="images/nampa-depot.webp" loading="lazy">
-            <p>Nampa Train Depot</p>
-            <img src="images/nampa-arcade.webp" loading="lazy">
-            <p>Jeremy's Downtown Arcade</p>
-            <img src="images/reel-theather.webp" loading="lazy">
-            <p>Reel Theather</p>
-            <img src="images/roaring-springs.webp" loading="lazy">
-            <p>Roaring Springs</p>
-            <img src="images/wahooz.webp" loading="lazy">
-            <p>Wahooz</p>
-        </div>
+        <section class="left-content">
+            <p id="lastVisit"></p>
+            <div class="demographics">
+                <h2>Demographics (as of 2023)</h2>
+                <p>Total Population: 109,926</p>
+                <p>Male: 49.3%</p>
+                <p>Female: 50.7%</p>
+                <p>Average Household Size: 2.81</p>
+            </div>
+            <div class="city-council">
+                <h2>City Council</h2>
+                <h3>Mayor</h3>
+                <p>Debbie Kling</p>
+                <h3>Council Members</h3>
+                <p>Victor Rodriquez</p>
+                <p>Natalie Jangula</p>
+                <p>David Bills</p>
+                <p>Dale Reynolds</p>
+                <p>Randy Haverfield</p>
+                <p>Sebastian Griffin</p>
+            </div>
+        </section>
+        <section class="right-content">
+            <div class="local-photos">
+                <img src="images/nampa-sign.webp" loading="lazy">
+                <p>Nampa Welcome sign</p>
+                <img src="images/nampa-depot.webp" loading="lazy">
+                <p>Nampa Train Depot</p>
+                <img src="images/nampa-arcade.webp" loading="lazy">
+                <p>Jeremy's Downtown Arcade</p>
+                <img src="images/reel-theather.webp" loading="lazy">
+                <p>Reel Theather</p>
+                <img src="images/roaring-springs.webp" loading="lazy">
+                <p>Roaring Springs</p>
+                <img src="images/wahooz.webp" loading="lazy">
+                <p>Wahooz</p>
+            </div>
+        </section>
     </main>
     <footer>
         <img src="images/logo.webp" alt="Nampa Commerce Logo">
