--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nampa Chamber of Commerce Home Page</title>
+    <title>Nampa Chamber of Commerce Discover Page</title>
     <meta name="description" content="This is the discover page for the 
     Nampa Chamber of Commerce site, created for WDD - 230. ">
     <meta name="author" content="Jennifer Weber">
