Added alts to discover images

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -64,17 +64,17 @@
         </section>
         <section class="right-content">
             <div class="local-photos">
-                <img src="images/nampa-sign.webp" loading="lazy">
+                <img src="images/nampa-sign.webp" alt="Nampa Welcome Sign" loading="lazy">
                 <p>Nampa Welcome sign</p>
-                <img src="images/nampa-depot.webp" loading="lazy">
+                <img src="images/nampa-depot.webp" alt="Nampa Train Depot" loading="lazy">
                 <p>Nampa Train Depot</p>
-                <img src="images/nampa-arcade.webp" loading="lazy">
+                <img src="images/nampa-arcade.webp" alt="Jeremy's Downtown Arcade" loading="lazy">
                 <p>Jeremy's Downtown Arcade</p>
-                <img src="images/reel-theather.webp" loading="lazy">
+                <img src="images/reel-theather.webp" alt="Reel Theather" loading="lazy">
                 <p>Reel Theather</p>
-                <img src="images/roaring-springs.webp" loading="lazy">
+                <img src="images/roaring-springs.webp" alt="Roaring Springs" loading="lazy">
                 <p>Roaring Springs</p>
-                <img src="images/wahooz.webp" loading="lazy">
+                <img src="images/wahooz.webp" alt="Wahooz" loading="lazy">
                 <p>Wahooz</p>
             </div>
         </section>
