Changed sections to divs

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -40,7 +40,7 @@
         </nav>
     </header>
     <main id="discover">
-        <section class="left-content">
+        <div class="left-content">
             <p id="lastVisit"></p>
             <div class="demographics">
                 <h2>Demographics (as of 2023)</h2>
@@ -61,8 +61,8 @@
                 <p>Randy Haverfield</p>
                 <p>Sebastian Griffin</p>
             </div>
-        </section>
-        <section class="right-content">
+        </div>
+        <div class="right-content">
             <div class="local-photos">
                 <img src="images/nampa-sign.webp" alt="Nampa Welcome Sign" loading="lazy">
                 <p>Nampa Welcome sign</p>
@@ -77,7 +77,7 @@
                 <img src="images/wahooz.webp" alt="Wahooz" loading="lazy">
                 <p>Wahooz</p>
             </div>
-        </section>
+        </div>
     </main>
     <footer>
         <img src="images/logo.webp" alt="Nampa Commerce Logo">
